# birkenbihl-sprachen-lernen

./: .env.example  .gitignore  ALIGNMENT_SYSTEM_DOCUMENTATION.md  CLAUDE.md  README.md  REFACTORING_PLAN.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  settings.yaml  settings.yaml.example
.claude/commands/: rtf-to-json.md
docs/: gui_components_usage.md
specs/: 00_README.md  01_EXECUTIVE_SUMMARY.md  02_CORE_CODE_ANALYSIS.md  03_GUI_CODE_ANALYSIS.md  04_CORE_GUI_ALIGNMENT.md  ORIGINAL_REQUIREMENTS.md  RUNNING_GUI.md  UI_REFACTORING_TASKS.md  spanish_german_translation.org  spanish_german_translation.txt  spanish_text_formatted.txt
specs/UI Konzept/: birkenbihl_ui_spec.md  interleaved_quick_reference.md  wortzuordnung_konzept.md
specs/__ALT_NICHT_BEACHTEN__/: ALIGNMENT_EDITOR_REDESIGN.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_REFACTORING.md
src/birkenbihl/: __init__.py  app.py  birkenbihl.py  cli.py  config.py  gui.py  main.py
src/birkenbihl/gui/: __init__.py  main.py
src/birkenbihl/gui/commands/: __init__.py  base.py  editor_commands.py  settings_commands.py  translation_commands.py
src/birkenbihl/gui/components/: __init__.py  alignment_preview.py  progress_widget.py  provider_selector.py
src/birkenbihl/gui/controllers/: __init__.py  alignment_controller.py
src/birkenbihl/gui/hooks/: __init__.py  alignment_hooks.py
src/birkenbihl/gui/models/: __init__.py  app_state.py  base.py  context.py  editor_viewmodel.py  grid_state.py  settings_viewmodel.py  translation_viewmodel.py  ui_state.py
src/birkenbihl/gui/services/: __init__.py  translation_ui_service.py
src/birkenbihl/gui/styles/: __init__.py  default.qss  theme.py
src/birkenbihl/gui/utils/: __init__.py  async_helper.py
src/birkenbihl/gui/viewmodels/: __init__.py  base.py  create_vm.py  settings_vm.py
src/birkenbihl/gui/views/: __init__.py  base.py  create_mode_panel.py  create_view.py  edit_mode_panel.py  editor_view.py  main_window.py  settings_view.py  translation_view.py  view_mode_panel.py
src/birkenbihl/gui/widgets/: __init__.py  alignment_editor.py  alignment_preview.py  base.py  grid_column.py  interleaved_grid.py  interleaved_grid_editable.py  language_combo.py  language_selector.py  natural_editor.py  progress_widget.py  provider_selector.py  sentence_card.py  sentence_list.py  tag_container.py  tag_widget.py  translation_display.py  unassigned_pool.py  word_tag.py
src/birkenbihl/models/: __init__.py  audio.py  dateutils.py  languages.py  requests.py  settings.py  translate.py  translation.py  validation.py
src/birkenbihl/presenters/: __init__.py  models.py  translation_presenter.py
src/birkenbihl/protocols/: __init__.py  audio.py  storage.py  translation.py
src/birkenbihl/providers/: __init__.py  anthropic_translator.py  base_translator.py  models.py  openai_translator.py  prompts.py  pydantic_ai_provider.py  pydantic_ai_translator.py  registry.py  text_utils.py
src/birkenbihl/services/: __init__.py  audio_service.py  language_service.py  path_service.py  settings_service.py  translation_service.py
src/birkenbihl/storage/: __init__.py  dao_models.py  exceptions.py  json_storage.py  settings_storage.py  sqlite_storage.py
src/birkenbihl/ui/: app.py  constants.py  edit_translation.py  main_ui.py  manage_translations.py  settings.py  translation.py  translation_result.py
src/birkenbihl/ui/components/: __init__.py  alignment.py  base.py  buttons.py  provider.py
src/birkenbihl/ui/models/: __init__.py  context.py
src/birkenbihl/ui/services/: __init__.py  base.py  translation_ui_service.py
src/birkenbihl/ui/state/: __init__.py  base.py  cache.py  session.py
src/birkenbihl/utils/: __init__.py  text_extractor.py
tests/: __init__.py  conftest.py  test_audio_service.py  test_database_service.py  test_integration.py  test_models.py  test_pydantic_ai_provider.py  test_translation_service.py  test_ui.py
tests/fixtures/: birkenbihl_unit1_1.json
tests/gui/: test_protocols.py
tests/gui/commands/: test_editor_commands.py  test_settings_commands.py  test_translation_commands.py
tests/gui/controllers/: __init__.py  test_alignment_controller.py
tests/gui/hooks/: __init__.py  test_alignment_hooks.py
tests/gui/models/: test_editor_viewmodel.py  test_grid_state.py  test_settings_viewmodel.py  test_translation_viewmodel.py  test_ui_state.py
tests/gui/utils/: test_async_helper.py
tests/gui/viewmodels/: __init__.py
tests/gui/views/: __init__.py  test_main_window.py  test_settings_view.py
tests/gui/widgets/: test_alignment_editor.py  test_alignment_preview.py  test_language_combo.py  test_language_selector.py  test_progress_widget.py  test_provider_selector.py  test_tag_container.py  test_tag_widget.py
tests/integration/: __init__.py  conftest.py  test_birkenbihl_unit1_1.py  test_settings_workflow.py  test_spanish_sentence_alignment.py  test_translation_editing.py
tests/models/: test_settings.py  test_validation.py  translation.py
tests/presenters/: __init__.py  test_translation_presenter.py
tests/providers/: README.md  __init__.py  conftest.py  test_anthropic_translator.py  test_base_translator.py  test_openai_translator.py  test_pydantic_ai_translator.py  test_registry.py  test_text_utils.py
tests/services/: test_settings_service.py  test_settings_service_database.py  test_translation_service.py
tests/storage/: test_settings_storage.py  test_settings_storage_concurrent.py  test_settings_storage_edge_cases.py  test_settings_storage_stress.py  test_sqlite_storage.py
tests/ui/: __init__.py  test_edit_translation.py  test_manage_translations.py  test_word_alignment_extraction.py
tests/ui/components/: test_alignment.py  test_buttons.py  test_provider.py
tests/ui/services/: test_translation_ui_service.py
tests/ui/state/: __init__.py  test_state.py
tests/utils/: test_text_extractor.py
