[project]
name = "birkenbihl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.14",
    "pydantic-ai>=0.0.12",
    "langdetect>=1.0.9",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "debugpy>=1.8.17",
]

[project.scripts]
birkenbihl = "birkenbihl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/birkenbihl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
