[project]
name = "birkenbihl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "langdetect>=1.0.9",
    "pydantic-ai>=0.0.12",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.14",
    "streamlit>=1.32.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pyright>=1.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest>=8.4.1",
    "ruff>=0.13.2",
]

[project.scripts]
birkenbihl = "birkenbihl.main:main"
birkenbihl-gui = "birkenbihl.main:main_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/birkenbihl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
